# Spectrum-Data-Analyzer

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
raman_analyzer/: README.md  __init__.py  __main__.py  app.py
raman_analyzer/analysis/: grouping.py  metrics.py  peaks.py
raman_analyzer/io/: __init__.py  loader.py  session_io.py
raman_analyzer/models/: __init__.py  selections.py  session.py
raman_analyzer/plotting/: __init__.py  plots.py
raman_analyzer/raman_analyzer/analysis/: __init__.py  grouping.py  metrics.py  peaks.py  trendlines.py
raman_analyzer/raman_analyzer/io/: __init__.py
raman_analyzer/raman_analyzer/plotting/: plots.py
raman_analyzer/raman_analyzer/ui/: __init__.py  main_window.py
raman_analyzer/raman_analyzer/ui/widgets/: calc_builder.py  data_table.py  file_list.py  plot_config.py  trendline_form.py
raman_analyzer/tests/: test_metrics.py  test_trendlines.py
raman_analyzer/tkui/: __init__.py  app.py  plot_controller.py  plot_panel.py  widgets.py
raman_analyzer/ui/: __init__.py  main_window.py  workers.py
raman_analyzer/ui/widgets/: __init__.py  calc_builder.py  data_table.py  file_list.py  plot_config.py  selection_panel.py  trendline_form.py
scripts/: check_no_pep604_unions.py
tests/: test_grouping_error_intervals.py  test_metrics.py  test_peaks.py  test_session_io.py  test_trendlines.py
tools/: migrate_mapping_csv.py  migrate_session_ordering.py
